--- a/CMPG323_Project2_ 33574359/CMPG323_Project2_ 33574359/appsettings.json
+++ b/CMPG323_Project2_ 33574359/CMPG323_Project2_ 33574359/appsettings.json
@@ -5,5 +5,5 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "ConnectionStrings": { "DefaultConnection": "Data Source=33574359-cmpg323-server.database.windows.net;Initial Catalog=cmpg323_project2_database;User ID=userAdmin;Password=Tshimbi071$;Connect Timeout=30;Encrypt=True;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False" }
+  "ConnectionStrings": { "DefaultConnection": "Data Source=33574359-cmpg323-server.database.windows.net;Initial Catalog=cmpg323_project2_database;Persist Security Info=True;User ID=userAdmin;Password=Tshimbi071$" }
 }
