--- a/CMPG323_Project2_ 33574359/CMPG323_Project2_ 33574359/appsettings.Development.json
+++ b/CMPG323_Project2_ 33574359/CMPG323_Project2_ 33574359/appsettings.Development.json
@@ -4,5 +4,6 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "ConnectionStrings": { "DefaultConnection": "Data Source=33574359-cmpg323-server.database.windows.net;Initial Catalog=cmpg323_project2_database;Persist Security Info=True;User ID=userAdmin;Password=Tshimbi071$" }
 }
